# openvslam

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  shell.nix
example/: CMakeLists.txt  run_csi_image_slam.cc  run_video_slam.cc  run_zmq_image_slam.cc  test_csi.cc
godot/: MapProto.gd  PoseMarker.tscn  export_presets.cfg  project.godot
godot/native/: game.gdnlib
godot/protobuf/: map_segment.proto  test.proto
godot/scenes/: CamTarget.gd  CamTarget.vs  Camera.vs  Colors.gd  CurrentFrame.gd  CurrentPose.gd  Edges.gd  ExpandButton.gd  Fps.gd  Frames.gd  Frames.vs  Game.tscn  GlobalEvents.gd  Ground.tres  JoiHandler.gd  Keyframes.gd  Landmarks.gd  Line2D.vs  PoseGTMat.tres  PoseMat.tres  ReadProto.gd  SendTerminate.gd  ShowMessages.vs  Spatial.gd  StaticBody.gd  Thumb.gd
rust/: Cargo.toml  build.rs
rust/protos/: map_segment.proto
rust/src/: game.rs  lib.rs  msg.rs  navigator.rs  proto_gen.rs  types.rs
rust/src/protos/: map_segment.rs
scripts/: install_dependencies.sh
src/openvslam/: system.cc  system.h  tracking_module.cc
src/openvslam/module/: keyframe_inserter.cc
src/socket_publisher/: MyTcpHandler.h  data_serializer.cc  data_serializer.h  publisher.cc  socket_client.cc  socket_client.h
src/socket_publisher/protobuf/: map_segment.proto
viewer/: package-lock.json
zmq_api/: CMakeLists.txt  run_api.cc
zmq_api/proto/: openvslam_api.proto
