[package]
name = "mirrors"
version = "0.1.0"
authors = ["Polgár András <azazdeaz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gdnative = "0.9.3"
tungstenite = "0.13.0"
async-tungstenite = "0.13.0"
json = "0.12.4"
nalgebra = "0.25"
ndarray = "0.15.1"
ndarray-linalg = "0.13.1"
url = "2.2.0"
zmq = "0.9"
protobuf = "2.22.1"
prost = "0.7.0"
base64 = "0.13.0"
hashbrown = "*"
scarlet = "1.1.0"
rosrust = "0.9"
rosrust_msg = "0.1"
crossbeam-channel = "0.5"
# gdnative = { path = "../../godot-rust/gdnative" }

[build-dependencies]
protoc-rust = "2.22.1"
prost-build = { version = "0.7.0" }
protobuf-codegen-pure = "2.22.1"

# [[bin]]
# name = "proto-gen"
# path = "src/proto_gen.rs"


